[gd_scene load_steps=3 format=3 uid="uid://cb3f2g4h1qx2m"]

[ext_resource type="Theme" path="res://themes/main_theme.tres" id="1_levelup"]
[ext_resource type="Script" path="res://scripts/ui/popups/LevelUpPopup.gd" id="2_levelup"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_levelup"]
bg_color = Color(0.00392157, 0.0196078, 0.0117647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0.25, 1)

[node name="LevelUpPopup" type="CanvasLayer"]
script = ExtResource("2_levelup")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -175.0
offset_right = 250.0
offset_bottom = 175.0
custom_minimum_size = Vector2(500, 350)
theme = ExtResource("1_levelup")
theme_override_styles/panel = SubResource("StyleBoxFlat_levelup")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Layout" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/Layout"]
layout_mode = 2
text = "Migliora le tue Statistiche"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/MarginContainer/Layout"]
layout_mode = 2

[node name="AvailablePointsLabel" type="Label" parent="Panel/MarginContainer/Layout"]
layout_mode = 2
text = "Punti Disponibili: 1"
horizontal_alignment = 1

[node name="Separator2" type="HSeparator" parent="Panel/MarginContainer/Layout"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="Panel/MarginContainer/Layout"]
layout_mode = 2

[node name="StatForza" type="HBoxContainer" parent="Panel/MarginContainer/Layout/StatsContainer"]
layout_mode = 2

[node name="ForzaLabel" type="Label" parent="Panel/MarginContainer/Layout/StatsContainer/StatForza"]
layout_mode = 2
size_flags_horizontal = 3
text = "Forza: 10"

[node name="ForzaButton" type="RichTextLabel" parent="Panel/MarginContainer/Layout/StatsContainer/StatForza"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[+]"

[node name="StatAgilita" type="HBoxContainer" parent="Panel/MarginContainer/Layout/StatsContainer"]
layout_mode = 2

[node name="AgilitaLabel" type="Label" parent="Panel/MarginContainer/Layout/StatsContainer/StatAgilita"]
layout_mode = 2
size_flags_horizontal = 3
text = "Agilità: 10"

[node name="AgilitaButton" type="RichTextLabel" parent="Panel/MarginContainer/Layout/StatsContainer/StatAgilita"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[+]"

[node name="StatIntelligenza" type="HBoxContainer" parent="Panel/MarginContainer/Layout/StatsContainer"]
layout_mode = 2

[node name="IntelligenzaLabel" type="Label" parent="Panel/MarginContainer/Layout/StatsContainer/StatIntelligenza"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intelligenza: 10"

[node name="IntelligenzaButton" type="RichTextLabel" parent="Panel/MarginContainer/Layout/StatsContainer/StatIntelligenza"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[+]"

[node name="StatCarisma" type="HBoxContainer" parent="Panel/MarginContainer/Layout/StatsContainer"]
layout_mode = 2

[node name="CarismaLabel" type="Label" parent="Panel/MarginContainer/Layout/StatsContainer/StatCarisma"]
layout_mode = 2
size_flags_horizontal = 3
text = "Carisma: 10"

[node name="CarismaButton" type="RichTextLabel" parent="Panel/MarginContainer/Layout/StatsContainer/StatCarisma"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[+]"

[node name="StatFortuna" type="HBoxContainer" parent="Panel/MarginContainer/Layout/StatsContainer"]
layout_mode = 2

[node name="FortunaLabel" type="Label" parent="Panel/MarginContainer/Layout/StatsContainer/StatFortuna"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fortuna: 10"

[node name="FortunaButton" type="RichTextLabel" parent="Panel/MarginContainer/Layout/StatsContainer/StatFortuna"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "[+]"

[node name="Separator3" type="HSeparator" parent="Panel/MarginContainer/Layout"]
layout_mode = 2

[node name="ProgressionInfo" type="VBoxContainer" parent="Panel/MarginContainer/Layout"]
layout_mode = 2

[node name="ProgressionTitle" type="Label" parent="Panel/MarginContainer/Layout/ProgressionInfo"]
layout_mode = 2
text = "═══ INFORMAZIONI PROGRESSIONE ═══"
horizontal_alignment = 1

[node name="LevelInfo" type="Label" parent="Panel/MarginContainer/Layout/ProgressionInfo"]
layout_mode = 2
text = "Livello Attuale: 1"

[node name="ExpInfo" type="Label" parent="Panel/MarginContainer/Layout/ProgressionInfo"]
layout_mode = 2
text = "Esperienza: 0 / 100"

[node name="ExpRemainingInfo" type="Label" parent="Panel/MarginContainer/Layout/ProgressionInfo"]
layout_mode = 2
text = "EXP Mancante: 100"

[node name="TotalExpInfo" type="Label" parent="Panel/MarginContainer/Layout/ProgressionInfo"]
layout_mode = 2
text = "EXP Totale: 0"

[node name="Separator4" type="HSeparator" parent="Panel/MarginContainer/Layout"]
layout_mode = 2

[node name="CloseContainer" type="HBoxContainer" parent="Panel/MarginContainer/Layout"]
layout_mode = 2

[node name="CloseButton" type="RichTextLabel" parent="Panel/MarginContainer/Layout/CloseContainer"]
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "Chiudi"